[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-image-sequence-compressor"
version = "1.0.0"
description = "ComfyUI node for compressing image sequences into a single file"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.7"
dependencies = [
    "Pillow>=9.0.0",
    "numpy>=1.21.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/comfyui-image-sequence-compressor"
Repository = "https://github.com/yourusername/comfyui-image-sequence-compressor"
